spacing fix

--- a/src/components/collections-grid/collections-grid.module.scss
+++ b/src/components/collections-grid/collections-grid.module.scss
@@ -35,7 +35,7 @@
       img {
         width: 100%;
         height: 100%;
-        border-radius: 250px;
+        border-radius: 99em;
         display: block;
         margin: 0 auto;
         padding: 15px;
@@ -44,7 +44,7 @@
         }
       }
       h3 {
-        margin-top: 40px;
+        margin-top: 20px;
         font-family: $font-secondary;
         color: $color-black;
         font-size: 1em;
@@ -53,6 +53,7 @@
         letter-spacing: 0.14em;
         @media (min-width: $tablet) {
           font-size: 1.5em;
+          margin-top: 40px;
         }
       }
     }
@@ -103,9 +104,9 @@
 }
 
 .shopButton {
-  min-width: 220px;
+  min-width: 200px;
   cursor: pointer;
-  height: 50px;
+  height: 45px;
   background: $color-orange;
   font-family: $font-secondary;
   font-weight: 600;
